# assembly_project

./: CMakeLists.txt  README.md  test1.lst  test1.s  test2.lst  test2.s  test3.lst  test3.s  test4.lst  testing.lst  z16asm  z16asm.c  z16sim  z16sim.c  z16sim.cpp
